--- a/fluent.conf
+++ b/fluent.conf
@@ -53,7 +53,7 @@
   verify_ssl false
   <headers>
     Content-Type application/json
-    Authorization Bearer FILL-ME-IN
+    Authorization Bearer WGf7woebyxEah3MxUXPItBmfJKPVIccs
     structure simple
   </headers>
   <buffer>
